feat: add oddship-clawdbot server with nix-clawdbot integration
Deploy clawdbot AI gateway on Hetzner VPS (ccx13) with:
- NixOS configuration with home-manager integration
- nix-clawdbot flake for Discord bot setup
- agenix secret for Discord bot token
- Terraform/OpenTofu infrastructure via nixos-anywhere
- systemd user service for clawdbot-gateway

Includes workaround for nix-clawdbot hardcoded /bin paths bug
(see: https://github.com/clawdbot/nix-clawdbot/issues/5)

"deploy clawdbot on a new NixOS Hetzner instance with Discord support"

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,14 @@
 result
 .memory
 *.local.*
+
+# Terraform (oddship-web)
 terraform/.terraform/
 terraform/*.tfstate*
 terraform/.terraform.lock.hcl
+
+# Terraform (clawdbot)
+terraform/clawdbot/.terraform/
+terraform/clawdbot/*.tfstate*
+terraform/clawdbot/.terraform.lock.hcl
+terraform/clawdbot/extra-files.sh
